fix: various mixin fixes and related stuff